--- a/main.css
+++ b/main.css
@@ -1,7 +1,10 @@
 body {
   line-height: 1.6;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
+  font-family: 'Open Sans', sans-serif;
   padding: 5%;
+  /*color: gray;*/
+  /*background-color: lightgreen;*/
 
   display: flex;
   flex-direction: column;
@@ -9,6 +12,11 @@ body {
 }
 
 h1 {
+  font-family: 'Baloo Bhaina', sans-serif;
+}
+
+h1,
+p {
   align-self: center;
   text-align: center;
 }
@@ -20,10 +28,29 @@ button {
   align-self: center;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 36em) {
 
   body {
-    padding: 8%;
+    background-color: orange;
+    padding: 7% 12%;
+  }
+
+}
+
+@media (min-width: 48em) {
+
+  body {
+    background-color: lightblue;
+    padding: 6% 15%;
+  }
+
+}
+
+@media (min-width: 60em) {
+
+  body {
+    background-color: lightgreen;
+    padding: 4% 25%;
   }
 
 }
