--- a/css/main.css
+++ b/css/main.css
@@ -1,27 +1,8 @@
-/***********************************
-GENERAL
-***********************************/
-
-*,
-*::after,
-*::before {
-  box-sizing: inherit;
-}
-
-:root {
-  font-size: 1em;
-}
-
-html {
-  box-sizing: border-box;
-}
-
 body {
   line-height: 1.6;
   letter-spacing: 1px;
   font-size: 1.5rem;
   font-family: 'Open Sans', sans-serif;
-
   padding: 5%;
   color: lightgray;
   background-color: teal;
@@ -38,24 +19,21 @@ a {
 }
 
 a:hover {
-  border-bottom-style: underline;
+  border-bottom-style: ridge;
 }
-
-
-
-/***********************************
-MAIN CONTENT
-***********************************/
 
 h1 {
   font-family: 'Baloo Bhaina', sans-serif;
   font-weight: normal;
   color: #fff;
+}
+
+h1 {
   align-self: center;
   text-align: center;
 }
 
-p.author {
+.author {
   text-align: left;
 }
 
@@ -75,21 +53,15 @@ button {
 
 footer {
   align-self: center;
-  margin-top: auto;
+  margin-top: 120px;
   font-size: 0.9rem;
 }
-
-
-
-/***********************************
-MEDIA QUERIES
-***********************************/
 
 @media (min-width: 36em) {
 
   body {
     padding: 7% 12%;
-    /*background-color: orange; */
+    background-color: orange;
   }
 
 }
@@ -98,7 +70,7 @@ MEDIA QUERIES
 
   body {
     padding: 6% 15%;
-    /*background-color: firebrick;*/
+    background-color: firebrick;
   }
 
 }
@@ -107,7 +79,7 @@ MEDIA QUERIES
 
   body {
     padding: 4% 25%;
-    /*background-color: green;*/
+    background-color: green;
   }
 
 }
